set a width to the wrapper. Known bug: Nav items overflow the wrapper on narrow sizes

--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,17 @@ html, body {
     width: 100%;
 }
 
-.wrapper {
-    height: 100%;
-    width: 100%;
+body {
+    display: flex;
+    justify-content: center;
     background-color: rgb(54, 54, 54);
+
+}
+
+.wrapper {
+    height: 100vh;
+    width: 80%;
+    
 }
 
 
@@ -57,6 +64,8 @@ html, body {
 }
 
 .main-content__hero {
+    display: flex;
+    justify-content: center;
     height: 35vh;
     overflow: hidden;
 }
